--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,9 @@ jobs:
     name: Release binary
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Setup Go
-        uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
 
       - name: Build
         run: make
