--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Build
         run: |
           VERSION=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g")
-          GOOS=linux  GOARCH=amd64 go build -o bin/dobato-linux-amd64.$VERSION
-          GOOS=darwin GOARCH=amd64 go build -o bin/dobato-darwin-amd64.$VERSION
-          GOOS=darwin GOARCH=arm64 go build -o bin/dobato-darwin-arm64.$VERSION
+          GOOS=linux  GOARCH=amd64 go build -o bin/dobato-linux-amd64-v$VERSION
+          GOOS=darwin GOARCH=amd64 go build -o bin/dobato-darwin-amd64-v$VERSION
+          GOOS=darwin GOARCH=arm64 go build -o bin/dobato-darwin-arm64-v$VERSION
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.1.1
